fix(search results): fix overlapping filter on result page on mobile

--- a/astro_2.0/components/DaoDetails/DaoDetailsGrid.module.scss
+++ b/astro_2.0/components/DaoDetails/DaoDetailsGrid.module.scss
@@ -31,7 +31,7 @@
 .flag {
   flex: 0 0 69px;
   height: 78px;
-  margin: 14px 16px;
+  margin: 8px 10px;
   position: relative;
   width: 69px;
 
@@ -67,6 +67,7 @@
 
 .title {
   padding: 12px 16px 12px 0;
+  width: 100%;
 
   @include tablet-portrait {
     padding-right: 24px;
@@ -102,7 +103,7 @@
     > .addressId,
     > .copyAddress {
       @include ellipse-text;
-      max-width: 180px;
+      max-width: calc(70%);
     }
   }
 }
