--- a/features/search/search-results/components/proposals-tab-view/ProposalsTabView.module.scss
+++ b/features/search/search-results/components/proposals-tab-view/ProposalsTabView.module.scss
@@ -24,7 +24,7 @@
   padding: 32px 0;
   position: sticky;
   top: 72px;
-  z-index: 2;
+  z-index: 11;
 }
 
 .votingEnds {
